# cargo-selector

./: Cargo.toml  Makefile.toml  README.md  _config.yml  rustfmt.toml
.github/workflows/: build.yml  gh-pages.yml  pinact.yml
img/: demo.tape
src/: cargo.rs  color.rs  config.rs  event.rs  lib.rs  macros.rs  main.rs  matcher.rs  tui.rs  util.rs
