[package]
name = "cargo-selector"
version = "0.5.0"
edition = "2021"
description = "Cargo subcommand to select and execute binary/example targets"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/cargo-selector"
repository = "https://github.com/lusingander/cargo-selector"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "plugin", "tui"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

exclude = ["/.github", "/img", "_config.yml"]

[dependencies]
cargo_metadata = "0.19.1"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.8"
laurier = "0.1.0"
ratatui = "0.29.0"
tui-input = "0.11.1"
