[package]
name = "cargo-selector"
version = "0.9.0"
edition = "2021"
description = "Cargo subcommand to select and execute binary/example targets"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/cargo-selector"
repository = "https://github.com/lusingander/cargo-selector"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "plugin", "tui"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
exclude = ["/.github", "/img", "_config.yml"]
rust-version = "1.86.0"

[dependencies]
cargo_metadata = "0.23.0"
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
fuzzy-matcher = "0.3.7"
laurier = "0.1.0"
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
tui-input = "0.14.0"
umbra = "0.4.0"

[dev-dependencies]
rstest = "0.26.1"
